Updated loose ends

--- a/MorgagingCo.html
+++ b/MorgagingCo.html
@@ -18,10 +18,10 @@
                 <li><a href="#">About us</a></li>
             </ul>
         </div>
-        <section class="hidden">
+        <section>
             <div class="items">
                 <h1></h1>
-                <p>text here</p>
+                <p>This is the main page showing properties and their description</p>
             </div>
         </section>
     </div>
