Made the page layour more clean
Cleaned up the footer, made a second page (in progress...) starting to work on adding images, adding animations. At least 3 short descriptions and images for the 1st main page, where the second page will hold more details for each house

--- a/Housing.html
+++ b/Housing.html
@@ -21,7 +21,38 @@
         <section>
             <div class="items">
                 <h1></h1>
-                <p>This is the house preview and moraging statistics page</p>
+                <p><div class="Para">
+    <p>
+        <br />
+        🌄 Unparalleled Views:<br />
+        Immerse yourself in breathtaking vistas that stretch beyond the horizon, from sunrise to sunset.<br />
+        Each day, you'll wake up to a canvas painted with nature's finest strokes.<br />
+        <br />
+        🏞️ Lush Landscaping:<br />
+        Step into your private sanctuary, where meticulously manicured gardens and lush greenery create an ambiance of pure serenity.<br />
+        Let the soothing sounds of rustling leaves be your soundtrack to relaxation.<br />
+
+        🏠 Architectural Elegance:<br />
+        Every corner of [Property Name] exudes sophistication.<br />
+        The design seamlessly marries contemporary aesthetics with timeless elegance, setting a new standard for luxurious living.<br />
+        <br />
+        🛋️ Luxurious Interiors:<br />
+        Walk through the grand entrance and be greeted by interiors that exude warmth and elegance.<br />
+        From the lavish living spaces to the cozy alcoves, every detail has been curated to provide the utmost comfort.<br />
+        <br />
+        🏊‍♂️ Resort-Style Amenities:<br />
+        Indulge in a lifestyle of leisure with a host of amenities designed to pamper your senses.<br />
+        Dive into the sparkling pool, unwind in the spa, or host unforgettable gatherings in the sprawling entertainment spaces.<br />
+        <br />
+        📍 Prime Location:<br />
+        [Property Name] offers not just a home, but a lifestyle.<br />
+        Conveniently located in proximity to [Landmarks or Neighborhood], you'll have easy access to the best that [City Name] has to offer.<br />
+        <br />
+        📸 View Your Future:<br />
+        The link below provides a glimpse into the grandeur that awaits you at [Property Name].<br />
+        These royalty-free property pictures capture just a fraction of the splendor that can soon become your reality.<br />
+    </p>
+</div></p>
             </div>
         </section>
     </div>
