--- a/MorgagingCo.html
+++ b/MorgagingCo.html
@@ -13,17 +13,57 @@
             <img src="logo.png" class="logo" />
             <ul>
                 <li><a href="MorgagingCo.html">Home</a></li>
-                <li><a href="Housing.html">Properties</a></li>
-                <li><a href="#">Partnerships</a></li>
+                <li><a href="Housing.html">Gallery</a></li>
+                <li><a href="#">Bookings</a></li>
                 <li><a href="#">About us</a></li>
             </ul>
         </div>
         <section>
-            <div class="items">
-                <h1></h1>
-                <p>This is the main page showing properties and their description</p>
+            <div class="container">
+                <div class="items">
+                    <h2>"Discover a World of Luxury and Comfort: Your Dream Home Awaits!</h2>
+                    <p>
+                        Welcome to JN Properties, where the extraordinary becomes your everyday.
+                        Imagine waking up to breathtaking views, <br />
+                        embracing modern elegance in every detail, and indulging in a lifestyle crafted for the discerning few. <br />
+                        We invite you to embark on a journey of unparalleled living, where each residence is a masterpiece and every community an oasis of tranquility. <br />
+                        Join us in redefining what it means to come home – a symphony of design, innovation, and sophistication awaits. <br />
+                        Your perfect haven is not a dream; it's JN Properties.<br />
+                    </p>
+                </div>
             </div>
         </section>
+    </div>
+    <div class="textBody">
+        <div class="textPos">
+                <div class="gallery">
+                    <h2>"Indulge in the Pinnacle of Serene Living - Your Oasis Awaits!</h2>
+                    <div class="disc">
+                        <h3>🏡 Property Highlights:</h3>
+                        <p>
+                            Nestled within the heart of tranquility and draped in sophistication, we present to you an extraordinary opportunity – a property that redefines luxury. <br />
+                            Welcome to a world where dreams take shape, and where every moment becomes a masterpiece.<br />
+                            As you explore the enchanting beauty of [Property Name], you'll find yourself captivated by the seamless blend of modern opulence and natural allure.<br />
+                        </p>
+                        <style>
+                            .transparent-button {
+                                background-color: transparent;
+                                border: none;
+                                color: aliceblue;
+                                text-decoration: underline;
+                                text-decoration-color: aliceblue;
+                                cursor: pointer;
+                                font-size: 16px;
+                                transition: all ease-in 0.2s;
+                            }
+                        </style>
+                        <button class="transparent-button">Discription.</button>
+                    </div>
+
+                    <img src="House1.jpg" alt="House1_Img1" width="200" height="150">
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <div class="holder">
@@ -42,7 +82,6 @@
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Join us</a></li>
                         <li><a href="#">Costomer Service</a></li>
-                        <li><a href="#">Payment methods </a></li>
                     </ul>
                 </div>
                 <div class="f_coloumn">
