Added the booking page
Bare minimum update;
Just header. footer,
Links to other pages
BG, fonts, Page Layout synced

TLDR: (CTRL+C  CTRL+V)

--- a/MorgagingCo.html
+++ b/MorgagingCo.html
@@ -14,14 +14,14 @@
             <ul>
                 <li><a href="MorgagingCo.html">Home</a></li>
                 <li><a href="Housing.html">Gallery</a></li>
-                <li><a href="#">Bookings</a></li>
+                <li><a href="Booking.html">Bookings</a></li>
                 <li><a href="#">About us</a></li>
             </ul>
         </div>
         <section>
             <div class="container">
                 <div class="items">
-                    <h2>"Discover a World of Luxury and Comfort: Your Dream Home Awaits!</h2>
+                    <h2>Discover a World of Luxury and Comfort: Your Dream Home Awaits!</h2>
                     <p>
                         Welcome to JN Properties, where the extraordinary becomes your everyday.
                         Imagine waking up to breathtaking views, <br />
@@ -37,7 +37,7 @@
     <div class="textBody">
         <div class="textPos">
                 <div class="gallery">
-                    <h2>"Indulge in the Pinnacle of Serene Living - Your Oasis Awaits!</h2>
+                    <h2>Indulge in the Pinnacle of Serene Living - Your Oasis Awaits!</h2>
                     <div class="disc">
                         <h3>🏡 Property Highlights:</h3>
                         <p>
@@ -45,18 +45,6 @@
                             Welcome to a world where dreams take shape, and where every moment becomes a masterpiece.<br />
                             As you explore the enchanting beauty of [Property Name], you'll find yourself captivated by the seamless blend of modern opulence and natural allure.<br />
                         </p>
-                        <style>
-                            .transparent-button {
-                                background-color: transparent;
-                                border: none;
-                                color: aliceblue;
-                                text-decoration: underline;
-                                text-decoration-color: aliceblue;
-                                cursor: pointer;
-                                font-size: 16px;
-                                transition: all ease-in 0.2s;
-                            }
-                        </style>
                         <button class="transparent-button">Discription.</button>
                     </div>
 
