Moved image & animation
Page Error:
Shifted to the left, will need to fix that
Description link needs to be moved under image

--- a/MorgagingCo.html
+++ b/MorgagingCo.html
@@ -36,21 +36,23 @@
     </div>
     <div class="textBody">
         <div class="textPos">
+            <div class="a_container">
                 <div class="gallery">
-                    <h2>Indulge in the Pinnacle of Serene Living - Your Oasis Awaits!</h2>
                     <div class="disc">
+                        <h2>Indulge in the Pinnacle of Serene Living - Your Oasis Awaits!</h2>
                         <h3>🏡 Property Highlights:</h3>
                         <p>
-                            Nestled within the heart of tranquility and draped in sophistication, we present to you an extraordinary opportunity – a property that redefines luxury. <br />
+                            Nestled within the heart of tranquility and draped in sophistication, we present to you an extraordinary opportunity<br />
+                            a property that redefines luxury.<br />
                             Welcome to a world where dreams take shape, and where every moment becomes a masterpiece.<br />
-                            As you explore the enchanting beauty of [Property Name], you'll find yourself captivated by the seamless blend of modern opulence and natural allure.<br />
+                            As you explore the enchanting beauty of WestWood Lake mansion,<br />
+                            you'll find yourself captivated by the seamless blend of modern opulence and natural allure.<br />
                         </p>
-                        <button class="transparent-button">Discription.</button>
+                        <img src="House1.jpg" alt="House1_Img1" width="450" height="300" class="slide-in">
                     </div>
-
-                    <img src="House1.jpg" alt="House1_Img1" width="200" height="150">
                 </div>
             </div>
+            <button class="transparent-button">Description</button>
         </div>
     </div>
     <div class="footer">
